# CarlinhosBoy

./: CMakeLists.txt  README.md  toolchain-windows.cmake
build_windows/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake
build_windows/include/raylib/: CTestTestfile.cmake  cmake_install.cmake
build_windows/include/raylib/raylib/: CTestTestfile.cmake  cmake_install.cmake
include/: actions.h  apu.h  cpu.h  dma.h  init.h  interface.h  joypad.h  lcd.h  mbc.h  memorybus.h  ppu.h  step_table.h
resources/: Cavalo.rc
src/: apu.cpp  cpu.cpp  dma.cpp  emulador.cpp  hdma.cpp  input.cpp  instrucoes.cpp  interface.cpp  main.cpp  mbc.cpp  noise.cpp  oambug.cpp  ppu.cpp  ppu_draw.cpp  ppu_fetcher.cpp  pulse.cpp  stack.cpp  timer.cpp  wave.cpp
